--- a/css/call-for-action.css
+++ b/css/call-for-action.css
@@ -24,7 +24,8 @@
     margin-right: auto; /**/
 	width: 30%; /**/
 
-	letter-spacing: 0.1rem;
+	letter-spacing: 0.03rem;
+	color: rgba(255, 255, 255, 0.5);
 }
 
 .call-for-action .main-link {}
