--- a/css/header.css
+++ b/css/header.css
@@ -78,7 +78,7 @@
 	position: relative;
     z-index: 10;
 
-	padding: 10px 18px;
+	padding: 10px 18px; /*8px 19px;*/
 	border: none; 
     border-radius: 28.5px;
 
@@ -119,7 +119,8 @@
 	border-radius: 20px 20px 28.5px 28.5px;
 
 	list-style: none;
-	background-color: rgba(224, 43, 43, 0.3);
+	/*background-color: rgba(224, 43, 43, 0.3);*/
+	background-color: #491111;
 	box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 }
 
@@ -154,7 +155,7 @@
 .language-picker-form {}
 
 .language-picker-form__select {
-	padding: 10px 12px 10px 45px;
+	padding: 10px 12px 10px 45px; /*9px 14px 9px 51px*/
     border: none;
     border-radius: 28.5px;
 
@@ -165,7 +166,7 @@
     background-color: rgba(224, 43, 43, 0.3);
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     background-repeat: no-repeat;
-    background-position: 15px center;
+    background-position: 15px center; /*18px center*/
     background-size: 25px 16px;
 
     -moz-appearance: none;
