--- a/css/profit.css
+++ b/css/profit.css
@@ -60,10 +60,11 @@
 
 .source__field,
 .source__desc {
-	font-size: 1.25rem;
+	font-size: 1.177rem; /*20px*/
 	font-weight: 400;
-	line-height: 1.58rem;
-	letter-spacing: 0.05rem;
+	line-height: 1.486rem; /*25.26px*/
+	letter-spacing: 0.03rem; /*0.03em=3%*/
+	color: rgba(255, 255, 255, 0.5);
 }
 
 .source__perc {
@@ -76,16 +77,16 @@
 
 	font-family: "Bebas Neue", "Arial Narrow", "Century Gothic", Helvetica, Tahoma, sans-serif;
 	font-weight: 700;
-	font-size: 13.12rem;
-	line-height: 16.57rem;
-	letter-spacing: 0.05rem;
+	font-size: 12.353rem; /*210px*/
+	line-height: 15.588rem; /*265px*/
+	letter-spacing: 0.03rem;/*0.03em=3%*/
 }
 
 .source .main-heading {
 	text-align: left;
-	font-size: 2.25rem;
-	line-height: 2.84rem;
-	letter-spacing: 0.05rem;
+	font-size: 2.118rem; /*36px*/
+	line-height: 2.675rem; /*45.47px*/
+	letter-spacing: 0.065rem; 
 }
 
 .source:nth-child(2n) .main-heading {
