--- a/css/style.css
+++ b/css/style.css
@@ -30,25 +30,32 @@
 	font-style: normal;
 }
 
+/* Desktop */
+/* Все размеры, относящиеся к тексту рассчитываются на основе этого */
+html {
+	font-size: 17px;
+}
+
 body {
 	background-color: #151414;
 
 	font-family: Roboto, Tahoma, Arial, Helvetica, Verdana, sans-serif;
 	font-weight: 400;
 	font-style: normal;
-	font-size: 1.063rem;
-	line-height: 1.25rem;
+	font-size: 1rem; /*17px*/
+	line-height: 1.177rem; /*20px*/
 	color: rgba(255, 255, 255, 0.7);
 }
 
 .main-heading {
 	font-family: "Bebas Neue", "Arial Narrow", "Century Gothic", Helvetica, Tahoma, sans-serif;
 	font-weight: 700;
-	font-size: 3.63rem;
-	line-height: 4.58rem;
+	font-size: 3.412rem; /*58px*/
+	line-height: 4.294rem; /*73px*/
 	text-transform: uppercase;
-	letter-spacing: 0.1rem;
+	letter-spacing: 0.03rem; /*0.03em=3%*/
 	text-align: center;
+	color: rgba(255, 255, 255, 0.8);
 }
 
 .inner-container_large {
@@ -89,7 +96,7 @@ body {
 
 	color: inherit;
     text-transform: uppercase;
-    letter-spacing: 0.1rem;
+    letter-spacing: 0.07rem; /*0.07em=7%*/
 }
 
 .main-link:hover {
