--- a/css/traders.css
+++ b/css/traders.css
@@ -33,10 +33,10 @@
 
 	font-family: "Bebas Neue", "Arial Narrow", "Century Gothic", Helvetica, Tahoma, sans-serif;
 	font-weight: 700;
-	font-size: 2.25rem;
-	line-height: 2.82rem;
-	letter-spacing: 0.1rem;
-	color: inherit;
+	font-size: 2.118rem; /*36px*/
+	line-height: 2.647rem; /*45px*/
+	letter-spacing: 0.03rem; /*0.03em=3%*/
+	color: inherit; 
 }
 
 .cases-switcher__link:hover {
@@ -87,6 +87,10 @@
 
 .case__info td {
 	padding: 5px 6px;
+}
+
+.case__info td:first-child {
+	color: rgba(255, 255, 255, 0.5);
 }
 
 .traders .main-link {}
